--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>KonChris E-banking</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <app-root></app-root>
   </div>
 </body>
