--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,6 +26,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="assets/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <script src="https://kit.fontawesome.com/b29ab45d53.js"></script>
 </head>
 
 <body>
@@ -37,8 +38,7 @@
 
 
     <!-- Copyright -->
-    <div class="">© ConChris Bank 2019 Copyright
-    </div>
+    <div class="footer-copyright">Copyright 2019© ConChris Bank </div>
     <!-- Copyright -->
 
   </footer>
