--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -31,7 +31,23 @@
 
 <body>
   <div class="container">
-    <app-root></app-root>
+    <app-root>
+      <div class="container">
+        <div class="row">
+          <div id="loader">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="loading"></div>
+          </div>
+        </div>
+      </div>
+    </app-root>
     <!-- Footer -->
   </div>
   <footer class="fixed-bottom">
